log/build_2022-11-21_13-54-34/create3_examples_py/stderr.log
  File "/home/awasch/work/src/create3_examples/install/create3_examples_py/lib/python3.8/site-packages/create3_examples_py/dance/create3_dance.py", line 32
    ]
    ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '(' on line 31

